<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.InsertionActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="393dp"
        android:layout_height="695dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="642dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical"
            android:padding="24dp">


            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@id/text"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:text="@string/drivepro"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:text="@string/add_new_vehicle"
                android:textColor="#39393E"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="149dp" />
            <TextView
                android:id="@+id/CusID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textColor="#39393E"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="149dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/vehiclemodel"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_editor"
                android:drawableLeft="@drawable/ic_baseline_car_rental_24"
                android:drawablePadding="8dp"
                android:hint="@string/vehicle_model"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8C8C"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/transition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_editor"
                android:drawableLeft="@drawable/ic_baseline_auto_awesome_mosaic_24"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:drawablePadding="8dp"
                android:hint="@string/transition_type"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8C8C"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_editor"

                android:drawableLeft="@drawable/ic_baseline_people_alt_24"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:drawablePadding="8dp"
                android:hint="@string/passengers"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8C8C"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/availbledays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_editor"

                android:drawableLeft="@drawable/ic_baseline_date_range_24"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:drawablePadding="8dp"
                android:hint="@string/available_days"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8C8C"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_editor"

                android:drawableLeft="@drawable/ic_baseline_monetization_on_24"
                android:drawablePadding="8dp"
                android:hint="@string/price_per_day"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8C8C"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_editor"

                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="8dp"
                android:hint="Location"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8C8C"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSaveData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#161297"
                android:text="@string/add_vehicle"
                android:textColor="#FFFEFE"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="385dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>
