<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.paymentActivity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/card_holder_name"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/card_number"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/cvv"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cvvNo"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/expire_date"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cvvNo"
        app:layout_constraintStart_toEndOf="@+id/cvvNo"
        app:layout_constraintTop_toBottomOf="@+id/curdNumber"
        app:layout_constraintVertical_bias="0.888"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="All transaction are secure and encrypted"
        android:textColor="#323030"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#120E8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:background="#120E8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <TextView
        android:id="@+id/etdriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/payment"
        android:textColor="#1C1B1B"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="352dp"
        android:layout_height="335dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_editor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="100dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#16298F"
        android:checked="true"
        android:clickable="true"
        android:text="@string/pay_now"
        android:textColor="#686868"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:srcCompat="@drawable/visa_mastercard_logo_300x105" />

    <EditText
        android:id="@+id/holderName"
        android:layout_width="170dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:background="#F6F6F6"
        android:backgroundTint="#EAE9E9"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/curdNumber"
        android:layout_width="170dp"
        android:layout_height="26dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="124dp"
        android:background="#F6F6F6"
        android:inputType="number"
        android:backgroundTint="#EAE9E9"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <EditText
        android:id="@+id/cvvNo"
        android:layout_width="50dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="#F6F6F6"
        android:inputType="number"
        android:backgroundTint="#EAE9E9"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:id="@+id/Exdate"
        android:layout_width="88dp"
        android:layout_height="27dp"
        android:inputType="date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="168dp"
        android:background="#F6F6F6"
        android:backgroundTint="#EAE9E9"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#120E8E"
        android:text="Complete Booking"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="#3F51B5"
        android:text="Pay "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100000/="
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

</androidx.constraintlayout.widget.ConstraintLayout>