<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="450dp"
        android:layout_height="35dp"
        android:background="#120E8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="450dp"
        android:layout_height="35dp"
        android:layout_marginTop="112dp"
        android:background="#120E8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddData" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_bank_details"
        android:textColor="#1C1B1B"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="334dp"
        android:layout_height="246dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_editor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="164dp"
        android:text="Card holder name:"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="Card number:"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_bank"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/select_branch"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/cardNoadd"
        android:layout_width="170dp"
        android:layout_height="26dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:background="#F6F6F6"
        android:backgroundTint="#EAE9E9"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <Spinner
        android:id="@+id/spinnerBank"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:entries="@array/BankName"
        android:layout_marginStart="176dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:entries="@array/CityName"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toTopOf="@+id/spinnerBank" />

    <EditText
        android:id="@+id/cardHoldName"
        android:layout_width="170dp"
        android:layout_height="26dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="68dp"
        android:inputType="text"
        android:background="#F6F6F6"
        android:backgroundTint="#EAE9E9"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCity" />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#120E8E"
        android:text="ADD"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="32dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>